--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/recharts": "^1.8.23",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "react": "^18.0.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-native-svg": "^12.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^6.0.0",
+    "recharts": "^2.1.9",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
