--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
+    "@types/reach__router": "^1.3.10",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "@types/recharts": "^1.8.23",
